--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -23,7 +23,7 @@
             <div class="nav-section-title">Main</div>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}" 
+                    <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' and request.resolver_match.namespace == 'businesses' %}active{% endif %}" 
                        href="/business/{{ request.tenant.slug }}/">
                         <i class="nav-icon fas fa-home"></i>
                         <span class="nav-text">Dashboard</span>
