--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -37,7 +37,7 @@
                     <div class="navbar-brand">
                         <div class="brand-logo">
                             <div class="brand-icon">
-                                <i class="fas fa-car-wash"></i>
+                                <img src="{% static 'img/logo.png' %}" alt="Autowash Logo" class="brand-logo-img">
                             </div>
                             <div class="brand-text">
                                 <span class="brand-name">Autowash</span>
